Update DoQuizTest.java